# ChangeLog for dev-vcs/mr
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-vcs/mr/ChangeLog,v 1.16 2014/09/10 06:12:42 dev-zero Exp $

*mr-1.20140831.1 (10 Sep 2014)

  10 Sep 2014; Tiziano Müller <dev-zero@gentoo.org> +mr-1.20140831.1.ebuild:
  Version bump.

*mr-1.20140227 (24 Mar 2014)

  24 Mar 2014; Pavlos Ratis <dastergon@gentoo.org> +mr-1.20140227.ebuild:
  Version bump, bug #483330

  24 Dec 2013; Pavlos Ratis <dastergon@gentoo.org> metadata.xml:
  add myself as maintainer

  23 Dec 2013; Pacho Ramos <pacho@gentoo.org> -mr-1.12.ebuild, -mr-1.13.ebuild,
  metadata.xml:
  Cleanup due bug #65652

*mr-1.14 (10 Mar 2013)

  10 Mar 2013; Torsten Veller <tove@gentoo.org> +mr-1.14.ebuild:
  Version bump

*mr-1.13 (31 Aug 2012)

  31 Aug 2012; Torsten Veller <tove@gentoo.org> -mr-1.11.ebuild,
  +mr-1.13.ebuild:
  Version bump. Cleanup

*mr-1.12 (02 Jun 2012)

  02 Jun 2012; Torsten Veller <tove@gentoo.org> +mr-1.12.ebuild:
  Version bump

  22 Apr 2012; Torsten Veller <tove@gentoo.org> -mr-1.04.ebuild,
  -mr-1.10.ebuild, metadata.xml:
  Cleanup

*mr-1.11 (18 Feb 2012)

  18 Feb 2012; Torsten Veller <tove@gentoo.org> +mr-1.11.ebuild, metadata.xml:
  Version bump

*mr-1.10 (07 Jan 2012)

  07 Jan 2012; Torsten Veller <tove@gentoo.org> -mr-1.02.ebuild,
  +mr-1.10.ebuild:
  Version bump. Cleanup

*mr-1.04 (23 Jun 2011)

  23 Jun 2011; Torsten Veller <tove@gentoo.org> -mr-0.50.ebuild,
  -mr-0.51.ebuild, +mr-1.04.ebuild:
  Version bump. Cleanup

*mr-1.02 (22 Jan 2011)

  22 Jan 2011; Torsten Veller <tove@gentoo.org> +mr-1.02.ebuild:
  Version bump

*mr-0.51 (17 Dec 2010)

  17 Dec 2010; Torsten Veller <tove@gentoo.org> -mr-0.49.ebuild,
  +mr-0.51.ebuild:
  Version bump. Cleanup

*mr-0.50 (30 Aug 2010)

  30 Aug 2010; Torsten Veller <tove@gentoo.org> -mr-0.48.ebuild,
  +mr-0.50.ebuild, metadata.xml:
  Version bump. Cleanup. Update longdescription

*mr-0.49 (24 Jul 2010)
