@@ -1,30 +1,26 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST mr-1.20140227.tar.gz 42845 SHA256 942a9bc891b3eaf13fec9911f15b08b4250d013de1befc05ac9b59a0757e1273 SHA512 12677da3a07ffb2c72c0b418a731ce2f29113c0556c332d6011558152070309a6d34ebe96a57c253ae874c0ae8f5dbb8f1204f40925b0d06bfb597d12b2ff22f WHIRLPOOL 983efe870a01f676506c781fc092558c5a15e44f1a5983a633fc9f196a559685c0df99a510138677c4973233c01d7bc00cb4458a1335ed8a703990aca05488c0
 DIST mr-1.20140831.1.tar.gz 44706 SHA256 efb864848d3c557d913138a52e3d5a4736edcccd9f9b46bb65931060cf8548f0 SHA512 f8004c37200bf0f227371d2cb747f38c1bf37d1ff270c299b1a97ee92b22a2be039da3c8e9b31b4402adb8ee985a16764115debedad027c5b0f830ceb3a39216 WHIRLPOOL d2eff39628324c3be7996a715ff487e8cb37313eecaed4dcaa25bc320c5d96ba32cc578a85dab241b53556b297ba29def3cd9ea2b3b5a7afe5e2dac57cfd544b
-DIST mr_1.14.tar.gz 39726 SHA256 639e55b8bd7f8e3b35c3e1042de1e7f446cefdb97cebc504f233629147681c3d SHA512 06317260b5809185ab7074ca5b10aac6b451c234a872ac5d8da378b75496ff4b259cbe0df96ea2a07c4687f92f4ac2bd7f9418cbc4c544c0f7cfb867fc5b72e5 WHIRLPOOL 3cc20a8b44b36f458ce1798b56e3e2674c47754a1d3d8bb53b89e8727b1c9cb7f04abc4f3118ad87521dadc0d0052d3d575268da9919de4af110a2d3f0745287
-EBUILD mr-1.14.ebuild 703 SHA256 b6bc0778209a0a5461fd5330b009384c731988cff0b493d2f29e5f053f87da3b SHA512 47b326e8f7e7a6de655460488ed391cd6d28a43ca7f593ff6228829af067e27354ab6c99082c9e7e73ae974f26c579aa309dd9fbc77858eec47cfbff86c1aff6 WHIRLPOOL 28a6ecb940e6b70e8a7bab1f09d895ae2cd08bc219a661f7f1facd65b2891b33945818d496060ac85db15c3bec2778c27eec3c12443d43066d10e3a1ce068af4
-EBUILD mr-1.20140227.ebuild 754 SHA256 012f431418b700ecd419a99d902f052e46f55731c855d3121b36b2874971207b SHA512 daf24fdff34fa3e3ae54745e39ae7d7f1bf014b24fef8612340fc78ad4b3e6cbf43cc6a91e0792cc77917fed855cd156692da66193967b5636eae8ab15be6879 WHIRLPOOL 4f2d466c330a35a422e9fd567ee873cd1bd9988b2e785deaad7893d56f3f251c2056b310a6e8486845b01ab248d7baac666d1082aa34ed3b71b9300b11ae9fd1
+DIST mr-1.20141024.tar.gz 45032 SHA256 7b68183476867d15d6f111fc9678335b94824dcfa09f07c761a72d64cdf5ad4a SHA512 d39428bc9858a3d9649ff841fa688a5cb92632bf957af9101c7f7e709d2821dbc38a2ab5400d9fe31208159873156cc6d740538b5567e758c35afb01744000d6 WHIRLPOOL a806e3543b1fc4864b2581883a348cc1441a75fb8ebd4fe6ab393f8180b820e0b389c0b40123798b8257a1641409747981227b6616368eafda4f3d56e9ba39a5
 EBUILD mr-1.20140831.1.ebuild 755 SHA256 e45788ca1cf42af5cdf9955427fd952480a6517f02e24ff49c4e522ea404727f SHA512 cccbfc6458f1bf8be96ff68c73108bad1100c342cbbe28900c4874d290608c306574523f219633e9a6abf6f2754b2afd98627fe3ba7c4c7db9dd30deb771fd4d WHIRLPOOL ab167047108d98a33d949bd39fe8e286aa390605df5725490d5372f450b7b2e230ebb5b4c79dc59b92dd195349f116a93d17d55c52974ef3f0133efa524ebfa0
-MISC ChangeLog 3028 SHA256 b57922a428d73e6d4440d8bcd66499eda281922d9d7381784c778185b42c2f3f SHA512 e84feea2552d68e3af84f3bef981b46017a777a9ebc88990ac9e877a9af0b77858bb5725ba131ec89377ff4356147e0104b9d5fdb9f4eace3862128bb4581aa0 WHIRLPOOL 16f0ab6f95cf215ae7376cd742d0afc2ffd41019fb9fb309c8890e2ca2a6a93cf56cbd6dacd62f50edaa7d25c75828b9bd8c440024a81b512a85a269a2c97863
-MISC metadata.xml 1276 SHA256 64002d2b5894293ead2737dbf9b027abb9520684c20ce256eb9cf301ae16fb71 SHA512 e36f5dfb0835f75749f52126e6b723e5a8f7609ac08b8e454ea3c1cf34763dff4762179c841a9f751921d746a7ed1540adcced0dee691f490cb3a23cb59eb649 WHIRLPOOL 561ed7f8f3c2e27b1b48da1aa787fe4f485e71a67efc22c0264a40fe233107d05d2e12a69b567dc82ec1d2d23408c8f424cdc4bf5eb4e6164f662eb402a89028
+EBUILD mr-1.20141024.ebuild 751 SHA256 c72a62f02b2d301684a9774133269b634ccb4bad617af18f0cbb836903e13e94 SHA512 36a588998e8ee87443281b904c86f11ec4a4d7252cedca9feeeeb6e889a7551f3b99b20c84a8cd6df9bb305b3a28201bff3e59dac82dca09416642f11b8830b4 WHIRLPOOL acb00e3d9a098b9a0cbb47785fdf2c31313e371bbb3a9f6bf9ea259ecf9aeeb7b35a09efdd274520edac8975fec6085517ccc156edc28f7b90cee261bab340e1
+MISC ChangeLog 3237 SHA256 6e1f98dddf71de62928f21b667d0f9fde8f9917ff1faf6c1bddd1cc271643c07 SHA512 c34be690cd29789a584544fd63c29533db1660d41652ee7c7ed7408be7cd42674b993401874d9e81171e5c87a6ed33cebb1953c7a017d913e9979b2f0be3ea08 WHIRLPOOL 74ec8ba6401aae4c9a954ce0117538db31ef2e44b4f324d718e7bc2fa3b38e5a5b4d5047892e9fd4660d7c6f60dce1150cc2a361e25fd24803ced2c6ccc3113d
+MISC metadata.xml 1275 SHA256 3bc4f31328f4effcc78cdb4c488775cd8c5d857fc705d1847f51317b317f54af SHA512 457d1c3cb9a164110e83210e9cf41262aa8d16a04ac11d84578b7cdd7b9c3edcbac9583b58e7a570b44503e4126ffec129a5de89e1648385a368b2dc708f5c5a WHIRLPOOL e7d54122a9ab567743336e9b0f548c20b19bd08e825594bf38436a0e90d7e87602139e81dc93c725716bce56e2fcee7cc01df9763634c8956b5f322427cd7c5b
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2.1
 
-iQJ8BAEBCABmBQJUD+vcXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXRCMjM3NDkyMkQ0OTFBMUIyMzgzNkZBMkUx
-QTVEMDIzOTc1QjA1ODNEAAoJEBpdAjl1sFg9sYUP/iPHIhmD2wOlGqNo0/R7f80i
-8u41pbo/nbbs0+/5r1gIMScPo8qVV0dv0IIEsuVYmCkj+k2V++TuAWs3XPG3RDt7
-W54iqPHGKR7q6c6qT/4jxRdbCN3RdFUCNXbK+fn+13p7ZSBua+Qh4zZWOzUTUlVX
-B67Yxpta+W5SCG10pkzpPXhIeaNV5Q8Qd/cYFgZ2DeQSR8wJusiawbdH2QwXRmjG
-DRxZoI3yWnWZscyJ6Fl5Hrk1h0PwY2wkf4qevTKaga54FGkwZL/WdYn0AbJWURUx
-Dx/ZejPTS4FNqozRN3emROgLbGXX1jZcK8sPIljG4FA1rFg+MqOMmFKbV3Gy/S4f
-wO3kTzKtLGu0l9YZe/AtuT19M8PbOQ6ghdksn6crR1byjgnCHwpSu+Guj4wWBlb7
-2lVU0bwQ5uCVeH+vVWqorVsVT0ukyJQA87DPcOywnoL6fIJTkykBb/QjKt160NDP
-5mibH9xnkDTWGdO9eUg1q7PLXGYK9rpMAMgXZ14FkPFpVoa77RAVEGuk372ZXOti
-nIp2bNTL8Y1hVPJNssY3Z3XqdwfaN8HQGcguEtApzGPoRegcpJoupWsRAEFqgkTR
-0Js85M+FUmmRjSgBiqZPQE9YniXK1s37CoAnf7KhXCXIToOmpu8urJQ3HN6F7JRK
-lz5hAJpqH6nSj7ubAO5V
-=N70Q
+iQIcBAEBCAAGBQJUYkGTAAoJELhOzYlK7nn/bNcP/2ieOV5y8lvNqXxmJE7ZIyaD
+vqRrLw6gE5/xG8EdOgdd+cf5tTHIo82NBiLz6tnMmiqCsH9+exd5LF3ge29gMHdL
+uEGxCvwXLuGKH0AHoaVqPCjuYFsezibMnnibTyZwHZxowirVANvT14b8FJF+Z7Aa
+IINcKU/PZJNq89rkfq4qxVGsiYBBe0soEIwuHKfej0F6PmHdnANwjqqRErywgM6y
+cxv5q/6o28/GYQ969Eb3gD57R2O2s2uovljRQ87l/GFEJukI2omBveHOw4Z/DQHZ
+d1jxmOHiWlLedxGVfrIm8AsM0AYgYy/B5ZJ5EZk8R2h5DhGMOinXsi3G422p2jb6
+/pxXFwCWgPhdAxCdxerwZKVDehuldQI6aFy4NitDGvpqgOqITtfNriKXyXJfixXD
+ZjqipkGYuCnqKhHX+yOzmERqiSlE4Q+1mEbtBVRHJ44R0YlfXYA5wWQReS1dAKtw
+HN8lo/JuHf3sahAE09IxabpX/VsYiTi+07656XSDfuEL8vIg+cBt3c31PARQzP2j
+FsmfXUFamrRGUF59EiewAtgyMCzzXpKGh4bSnlU4wYv7OLZVE0YovzIJ5846RWvB
+4I21r7i6Crctlh/RwK5Dl2qjzJ8NpzFYkI/UKKFwrd+Ev7OXkCmtEnjGJltJMkaD
+NTgfHaP9ynBTCh8MgG1U
+=B6v7
 -----END PGP SIGNATURE-----
