@@ -2,8 +2,8 @@
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
 	<maintainer>
-		<email>dastergon@gentoo.org</email>
-		<name>Pavlos Ratis</name>
+		<email>tamiko@gentoo.org</email>
+		<name>Matthias Maier</name>
 	</maintainer>
 	<longdescription lang="en">
 		The mr(1) command can checkout, update, or perform other actions on a
