@@ -1,11 +1,0 @@
-DEFINED_PHASES=install
-DEPEND=dev-lang/perl
-DESCRIPTION=Multiple Repository management tool
-EAPI=5
-HOMEPAGE=http://joeyh.name/code/mr/
-KEYWORDS=~amd64 ~x86
-LICENSE=GPL-2
-RDEPEND=dev-lang/perl dev-perl/libwww-perl dev-perl/HTML-Parser
-SLOT=0
-SRC_URI=mirror://debian/pool/main/m/mr/mr_1.14.tar.gz
-_md5_=5b08791a515091ebcc8c9fc734be479d
