@@ -7,5 +7,5 @@ KEYWORDS=~amd64 ~x86
 LICENSE=GPL-2
 RDEPEND=dev-lang/perl dev-perl/libwww-perl dev-perl/HTML-Parser
 SLOT=0
-SRC_URI=https://github.com/joeyh/myrepos/archive/1.20140227.tar.gz -> mr-1.20140227.tar.gz
-_md5_=69cf4b54a972ea55a485d0cc91d1d3df
+SRC_URI=https://github.com/joeyh/myrepos/archive/1.20141024.tar.gz -> mr-1.20141024.tar.gz
+_md5_=5dc0e1eec3f8c37b56491c4cc495cac7
