@@ -1,6 +1,12 @@
 # ChangeLog for dev-vcs/mr
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-vcs/mr/ChangeLog,v 1.16 2014/09/10 06:12:42 dev-zero Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-vcs/mr/ChangeLog,v 1.17 2014/11/11 17:04:18 tamiko Exp $
+
+*mr-1.20141024 (11 Nov 2014)
+
+  11 Nov 2014; Matthias Maier <tamiko@gentoo.org> +mr-1.20141024.ebuild,
+  -mr-1.14.ebuild, -mr-1.20140227.ebuild, metadata.xml:
+  take over maintainership; version bump; drop old
 
 *mr-1.20140831.1 (10 Sep 2014)
 
